--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </body>
     <table style="border:1px solid #000000">
       <tr>
-          EXPLOTAAAAA
+          Síí EXPLOTAAAAA Ö
           <td>Fila 1, C1, CAMBIO 1</td>
           <td>Fila 1, C2</td>
       </tr>
